modified:   CSS/styles.css 	modified:   index.html 	modified:   portfolio.html

--- a/index.html
+++ b/index.html
@@ -10,6 +10,10 @@
       href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
       rel="stylesheet"
     />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.0.0/modern-normalize.min.css"
+    />
     <link rel="stylesheet" href="./CSS/styles.css" />
     <title>Studio</title>
   </head>
@@ -55,7 +59,7 @@
 
       <!-- Our benefits section -->
       <section class="benefits section">
-        <h2 class="section-title">Our benefits</h2>
+        <h2 class="section-title visually-hidden">Our benefits</h2>
         <ul class="card-list">
           <li class="card-item">
             <h3 class="title">Strategy</h3>
