--- a/portfolio.html
+++ b/portfolio.html
@@ -10,6 +10,10 @@
       href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
       rel="stylesheet"
     />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.0.0/modern-normalize.min.css"
+    />
     <link rel="stylesheet" href="./CSS/styles.css" />
     <title>Portfolio</title>
   </head>
@@ -46,7 +50,7 @@
     </header>
 
     <main>
-      <h1>Our Portfolio</h1>
+      <h1 class="visually-hidden">Our Portfolio</h1>
 
       <section class="protfolio section">
         <!-- Filter buttons -->
