--- a/index.html
+++ b/index.html
@@ -7,12 +7,15 @@
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Raleway:wght@800&family=Roboto:wght@400;500;700;900&display=swap"
       rel="stylesheet"
     />
     <link
       rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.0.0/modern-normalize.min.css"
+      href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.min.css"
+      integrity="sha512-wpPYUAdjBVSE4KJnH1VR1HeZfpl1ub8YT/NKx4PuQ5NmX2tKuGu6U/JRp5y+Y8XG2tV+wKQpNHVUX03MfMFn9Q=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
     />
     <link rel="stylesheet" href="./CSS/styles.css" />
     <title>Studio</title>
@@ -23,7 +26,7 @@
     <header class="header">
       <nav class="header-nav">
         <a href="./index.html" class="logo">
-          <span class="logo-web">WEB</span>STUDIO
+          <span class="logo-web">web</span>studio
         </a>
         <ul class="main-menu">
           <li class="menu-item">
@@ -174,7 +177,7 @@
     <!-- Footer section -->
     <footer class="footer">
       <a href="./index.html" class="logo"
-        ><span class="logo-web">WEB</span>STUDIO</a
+        ><span class="logo-web">web</span>studio</a
       >
       <p class="text">
         Increase the flow of customers and sales for your business with digital
