--- a/portfolio.html
+++ b/portfolio.html
@@ -7,12 +7,15 @@
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Raleway:wght@800&family=Roboto:wght@400;500;700;900&display=swap"
       rel="stylesheet"
     />
     <link
       rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.0.0/modern-normalize.min.css"
+      href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.min.css"
+      integrity="sha512-wpPYUAdjBVSE4KJnH1VR1HeZfpl1ub8YT/NKx4PuQ5NmX2tKuGu6U/JRp5y+Y8XG2tV+wKQpNHVUX03MfMFn9Q=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
     />
     <link rel="stylesheet" href="./CSS/styles.css" />
     <title>Portfolio</title>
@@ -20,47 +23,48 @@
 
   <body>
     <!-- Header navigation section -->
-    <header class="header">
-      <nav class="header-nav">
-        <a href="./index.html" class="logo">
-          <span class="logo-web">WEB</span>STUDIO
-        </a>
-        <ul class="main-menu">
-          <li class="menu-item">
-            <a href="./index.html" class="menu-link">Studio</a>
+    <div class="main-nav">
+      <header class="header">
+        <nav class="header-nav">
+          <a href="./index.html" class="logo">
+            <span class="logo-web">web</span>studio
+          </a>
+          <ul class="main-menu">
+            <li class="menu-item">
+              <a href="./index.html" class="menu-link">Studio</a>
+            </li>
+            <li class="menu-item">
+              <a href="./portfolio.html" class="menu-link">Portfolio</a>
+            </li>
+            <li class="menu-item">
+              <a href="./index.html" class="menu-link">Contacts</a>
+            </li>
+          </ul>
+        </nav>
+        <ul class="header-addr">
+          <li class="addr-item">
+            <a href="mailto:info@devstudio.com" class="addr-mail"
+              >info@devstudio.com</a
+            >
           </li>
-          <li class="menu-item">
-            <a href="./portfolio.html" class="menu-link">Portfolio</a>
-          </li>
-          <li class="menu-item">
-            <a href="./index.html" class="menu-link">Contacts</a>
+          <li class="addr-item">
+            <a href="tel:+110001111111" class="addr-tel">+11 (000) 111-11-11</a>
           </li>
         </ul>
-      </nav>
-      <ul class="header-addr">
-        <li class="addr-item">
-          <a href="mailto:info@devstudio.com" class="addr-mail"
-            >info@devstudio.com</a
-          >
-        </li>
-        <li class="addr-item">
-          <a href="tel:+110001111111" class="addr-tel">+11 (000) 111-11-11</a>
-        </li>
-      </ul>
-    </header>
+      </header>
+    </div>
 
     <main>
-      <h1 class="visually-hidden">Our Portfolio</h1>
-
       <section class="protfolio section">
+        <h1 class="section-title visually-hidden">Our Portfolio</h1>
         <!-- Filter buttons -->
         <ul class="filters">
-          <li><button name="button" class="filter-button">All</button></li>
-          <li><button name="button" class="filter-button">Web Site</button></li>
-          <li><button name="button" class="filter-button">App</button></li>
-          <li><button name="button" class="filter-button">Design</button></li>
+          <li><button type="button" class="filter-button">All</button></li>
+          <li><button type="button" class="filter-button">Web Site</button></li>
+          <li><button type="button" class="filter-button">App</button></li>
+          <li><button type="button" class="filter-button">Design</button></li>
           <li>
-            <button name="button" class="filter-button">Marketing</button>
+            <button type="button" class="filter-button">Marketing</button>
           </li>
         </ul>
 
@@ -74,12 +78,7 @@
                 alt="Banking App Interface Concept"
                 width="360"
               />
-              <p class="text">
-                14 Stylish and User-Friendly App Design Concepts · Task Manager
-                App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud
-                Storage App
-              </p>
-              <h3 class="title">Banking App Interface Concept</h3>
+              <h2 class="title">Banking App Interface Concept</h2>
               <p class="filter-tag text">App</p>
             </a>
           </li>
@@ -91,12 +90,7 @@
                 alt="Cashless Payment"
                 width="360"
               />
-              <p class="text">
-                14 Stylish and User-Friendly App Design Concepts · Task Manager
-                App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud
-                Storage App
-              </p>
-              <h3 class="title">Cashless Payment</h3>
+              <h2 class="title">Cashless Payment</h2>
               <p class="filter-tag text">Marketing</p>
             </a>
           </li>
@@ -108,12 +102,7 @@
                 alt="Meditaion App"
                 width="360"
               />
-              <p class="text">
-                14 Stylish and User-Friendly App Design Concepts · Task Manager
-                App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud
-                Storage App
-              </p>
-              <h3 class="title">Meditaion App</h3>
+              <h2 class="title">Meditaion App</h2>
               <p class="filter-tag text">App</p>
             </a>
           </li>
@@ -125,12 +114,7 @@
                 alt="Taxi Service"
                 width="360"
               />
-              <p class="text">
-                14 Stylish and User-Friendly App Design Concepts · Task Manager
-                App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud
-                Storage App
-              </p>
-              <h3 class="title">Taxi Service</h3>
+              <h2 class="title">Taxi Service</h2>
               <p class="filter-tag text">Marketing</p>
             </a>
           </li>
@@ -142,12 +126,7 @@
                 alt="Screen Illustrations"
                 width="360"
               />
-              <p class="text">
-                14 Stylish and User-Friendly App Design Concepts · Task Manager
-                App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud
-                Storage App
-              </p>
-              <h3 class="title">Screen Illustrations</h3>
+              <h2 class="title">Screen Illustrations</h2>
               <p class="filter-tag text">Design</p>
             </a>
           </li>
@@ -159,12 +138,7 @@
                 alt="Online Courses"
                 width="360"
               />
-              <p class="text">
-                14 Stylish and User-Friendly App Design Concepts · Task Manager
-                App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud
-                Storage App
-              </p>
-              <h3 class="title">Online Courses</h3>
+              <h2 class="title">Online Courses</h2>
               <p class="filter-tag text">Marketing</p>
             </a>
           </li>
@@ -176,12 +150,7 @@
                 alt="Instagram Stories Concept"
                 width="360"
               />
-              <p class="text">
-                14 Stylish and User-Friendly App Design Concepts · Task Manager
-                App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud
-                Storage App
-              </p>
-              <h3 class="title">Instagram Stories Concept</h3>
+              <h2 class="title">Instagram Stories Concept</h2>
               <p class="filter-tag text">Design</p>
             </a>
           </li>
@@ -193,12 +162,7 @@
                 alt="Organic Food"
                 width="360"
               />
-              <p class="text">
-                14 Stylish and User-Friendly App Design Concepts · Task Manager
-                App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud
-                Storage App
-              </p>
-              <h3 class="title">Organic Food</h3>
+              <h2 class="title">Organic Food</h2>
               <p class="filter-tag text">Web Site</p>
             </a>
           </li>
@@ -210,12 +174,7 @@
                 alt="Fresh Coffee"
                 width="360"
               />
-              <p class="text">
-                14 Stylish and User-Friendly App Design Concepts · Task Manager
-                App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud
-                Storage App
-              </p>
-              <h3 class="title">Fresh Coffee</h3>
+              <h2 class="title">Fresh Coffee</h2>
               <p class="filter-tag text">Web Site</p>
             </a>
           </li>
@@ -225,7 +184,7 @@
 
     <footer class="footer">
       <a href="./index.html" class="logo"
-        ><span class="logo-web">WEB</span>STUDIO</a
+        ><span class="logo-web">web</span>studio</a
       >
       <p class="text">
         Increase the flow of customers and sales for your business with digital
