--- a/portfolio.html
+++ b/portfolio.html
@@ -23,8 +23,8 @@
 
   <body>
     <!-- Header navigation section -->
-    <div class="main-nav">
-      <header class="header">
+    <header class="header">
+      <div class="container main-nav">
         <nav class="header-nav">
           <a href="./index.html" class="logo">
             <span class="logo-web">web</span>studio
@@ -51,146 +51,176 @@
             <a href="tel:+110001111111" class="addr-tel">+11 (000) 111-11-11</a>
           </li>
         </ul>
-      </header>
-    </div>
+      </div>
+    </header>
 
     <main>
       <section class="protfolio section">
-        <h1 class="section-title visually-hidden">Our Portfolio</h1>
-        <!-- Filter buttons -->
-        <ul class="filters">
-          <li><button type="button" class="filter-button">All</button></li>
-          <li><button type="button" class="filter-button">Web Site</button></li>
-          <li><button type="button" class="filter-button">App</button></li>
-          <li><button type="button" class="filter-button">Design</button></li>
-          <li>
-            <button type="button" class="filter-button">Marketing</button>
-          </li>
-        </ul>
+        <div class="container protfolio">
+          <h1 class="section-title visually-hidden">Our Portfolio</h1>
+          <!-- Filter buttons -->
+          <ul class="filters">
+            <li class="filters-list">
+              <button type="button" class="filter-button">All</button>
+            </li>
+            <li class="filters-list">
+              <button type="button" class="filter-button">Web Site</button>
+            </li>
+            <li class="filters-list">
+              <button type="button" class="filter-button">App</button>
+            </li>
+            <li class="filters-list">
+              <button type="button" class="filter-button">Design</button>
+            </li>
+            <li class="filters-list">
+              <button type="button" class="filter-button">Marketing</button>
+            </li>
+          </ul>
 
-        <!-- gallery section -->
-        <ul class="card-list">
-          <li class="card-item">
-            <a class="card-link" href="./">
-              <img
-                class="image"
-                src="./images/portfolio/banking-app-interface.jpg"
-                alt="Banking App Interface Concept"
-                width="360"
-              />
-              <h2 class="title">Banking App Interface Concept</h2>
-              <p class="filter-tag text">App</p>
-            </a>
-          </li>
-          <li class="card-item">
-            <a class="card-link" href="./">
-              <img
-                class="image"
-                src="./images/portfolio/cashless-payment.jpg"
-                alt="Cashless Payment"
-                width="360"
-              />
-              <h2 class="title">Cashless Payment</h2>
-              <p class="filter-tag text">Marketing</p>
-            </a>
-          </li>
-          <li class="card-item">
-            <a class="card-link" href="./">
-              <img
-                class="image"
-                src="./images/portfolio/mediaton-app.jpg"
-                alt="Meditaion App"
-                width="360"
-              />
-              <h2 class="title">Meditaion App</h2>
-              <p class="filter-tag text">App</p>
-            </a>
-          </li>
-          <li class="card-item">
-            <a class="card-link" href="./">
-              <img
-                class="image"
-                src="./images/portfolio/taxi-service.jpg"
-                alt="Taxi Service"
-                width="360"
-              />
-              <h2 class="title">Taxi Service</h2>
-              <p class="filter-tag text">Marketing</p>
-            </a>
-          </li>
-          <li class="card-item">
-            <a class="card-link" href="./">
-              <img
-                class="image"
-                src="./images/portfolio/screen-illustrations.jpg"
-                alt="Screen Illustrations"
-                width="360"
-              />
-              <h2 class="title">Screen Illustrations</h2>
-              <p class="filter-tag text">Design</p>
-            </a>
-          </li>
-          <li class="card-item">
-            <a class="card-link" href="./">
-              <img
-                class="image"
-                src="./images/portfolio/online-courses.jpg"
-                alt="Online Courses"
-                width="360"
-              />
-              <h2 class="title">Online Courses</h2>
-              <p class="filter-tag text">Marketing</p>
-            </a>
-          </li>
-          <li class="card-item">
-            <a class="card-link" href="./">
-              <img
-                class="image"
-                src="./images/portfolio/instagram-stories-concept.jpg"
-                alt="Instagram Stories Concept"
-                width="360"
-              />
-              <h2 class="title">Instagram Stories Concept</h2>
-              <p class="filter-tag text">Design</p>
-            </a>
-          </li>
-          <li class="card-item">
-            <a class="card-link" href="./">
-              <img
-                class="image"
-                src="./images/portfolio/organic-food.jpg"
-                alt="Organic Food"
-                width="360"
-              />
-              <h2 class="title">Organic Food</h2>
-              <p class="filter-tag text">Web Site</p>
-            </a>
-          </li>
-          <li class="card-item">
-            <a class="card-link" href="./">
-              <img
-                class="image"
-                src="./images/portfolio/fresh-coffee.jpg"
-                alt="Fresh Coffee"
-                width="360"
-              />
-              <h2 class="title">Fresh Coffee</h2>
-              <p class="filter-tag text">Web Site</p>
-            </a>
-          </li>
-        </ul>
+          <!-- gallery section -->
+          <ul class="card-list">
+            <li class="card-item">
+              <a class="card-link" href="./">
+                <img
+                  class="image"
+                  src="./images/portfolio/banking-app-interface.jpg"
+                  alt="Banking App Interface Concept"
+                  width="360"
+                />
+                <div class="card-content">
+                  <h2 class="title">Banking App Interface Concept</h2>
+                  <p class="filter-tag text">App</p>
+                </div>
+              </a>
+            </li>
+            <li class="card-item">
+              <a class="card-link" href="./">
+                <img
+                  class="image"
+                  src="./images/portfolio/cashless-payment.jpg"
+                  alt="Cashless Payment"
+                  width="360"
+                />
+                <div class="card-content">
+                  <h2 class="title">Cashless Payment</h2>
+                  <p class="filter-tag text">Marketing</p>
+                </div>
+              </a>
+            </li>
+            <li class="card-item">
+              <a class="card-link" href="./">
+                <img
+                  class="image"
+                  src="./images/portfolio/mediaton-app.jpg"
+                  alt="Meditaion App"
+                  width="360"
+                />
+                <div class="card-content">
+                  <h2 class="title">Meditaion App</h2>
+                  <p class="filter-tag text">App</p>
+                </div>
+              </a>
+            </li>
+            <li class="card-item">
+              <a class="card-link" href="./">
+                <img
+                  class="image"
+                  src="./images/portfolio/taxi-service.jpg"
+                  alt="Taxi Service"
+                  width="360"
+                />
+                <div class="card-content">
+                  <h2 class="title">Taxi Service</h2>
+                  <p class="filter-tag text">Marketing</p>
+                </div>
+              </a>
+            </li>
+            <li class="card-item">
+              <a class="card-link" href="./">
+                <img
+                  class="image"
+                  src="./images/portfolio/screen-illustrations.jpg"
+                  alt="Screen Illustrations"
+                  width="360"
+                />
+                <div class="card-content">
+                  <h2 class="title">Screen Illustrations</h2>
+                  <p class="filter-tag text">Design</p>
+                </div>
+              </a>
+            </li>
+            <li class="card-item">
+              <a class="card-link" href="./">
+                <img
+                  class="image"
+                  src="./images/portfolio/online-courses.jpg"
+                  alt="Online Courses"
+                  width="360"
+                />
+                <div class="card-content">
+                  <h2 class="title">Online Courses</h2>
+                  <p class="filter-tag text">Marketing</p>
+                </div>
+              </a>
+            </li>
+            <li class="card-item">
+              <a class="card-link" href="./">
+                <img
+                  class="image"
+                  src="./images/portfolio/instagram-stories-concept.jpg"
+                  alt="Instagram Stories Concept"
+                  width="360"
+                />
+                <div class="card-content">
+                  <h2 class="title">Instagram Stories Concept</h2>
+                  <p class="filter-tag text">Design</p>
+                </div>
+              </a>
+            </li>
+            <li class="card-item">
+              <a class="card-link" href="./">
+                <img
+                  class="image"
+                  src="./images/portfolio/organic-food.jpg"
+                  alt="Organic Food"
+                  width="360"
+                />
+                <div class="card-content">
+                  <h2 class="title">Organic Food</h2>
+                  <p class="filter-tag text">Web Site</p>
+                </div>
+              </a>
+            </li>
+            <li class="card-item">
+              <a class="card-link" href="./">
+                <img
+                  class="image"
+                  src="./images/portfolio/fresh-coffee.jpg"
+                  alt="Fresh Coffee"
+                  width="360"
+                />
+                <div class="card-content">
+                  <h2 class="title">Fresh Coffee</h2>
+                  <p class="filter-tag text">Web Site</p>
+                </div>
+              </a>
+            </li>
+          </ul>
+        </div>
       </section>
     </main>
 
     <footer class="footer">
-      <a href="./index.html" class="logo"
-        ><span class="logo-web">web</span>studio</a
-      >
-      <p class="text">
-        Increase the flow of customers and sales for your business with digital
-        marketing & growth solutions.
-      </p>
-      <!-- <address></address> -->
+      <div class="container footer">
+        <a href="./index.html" class="logo">
+          <span class="logo-web">web</span>studio
+        </a>
+        <p class="text">
+          Increase the flow of customers and sales for your business with
+          digital marketing & growth solutions.
+        </p>
+        <!-- <address></address> -->
+      </div>
     </footer>
   </body>
 </html>
