modified:   CSS/styles.css 	modified:   index.html 	modified:   portfolio.html

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
       <!-- Title section -->
       <section class="main section">
         <div class="container">
-          <h1 class="main-title">Effective Solutions<br />Your Business</h1>
+          <h1 class="main-title">Effective Solutions Your Business</h1>
           <button type="button" class="order-btn">Order Service</button>
         </div>
       </section>
