--- a/portfolio.html
+++ b/portfolio.html
@@ -85,10 +85,10 @@
             <li class="card-item">
               <a class="card-link" href="./">
                 <img
-                  class="image"
+                  class="card-img"
                   src="./images/portfolio/banking-app-interface.jpg"
                   alt="Banking App Interface Concept"
-                  width="359"
+                  width="360"
                 />
                 <div class="card-content">
                   <h2 class="title">Banking App Interface Concept</h2>
@@ -99,10 +99,10 @@
             <li class="card-item">
               <a class="card-link" href="./">
                 <img
-                  class="image"
+                  class="card-img"
                   src="./images/portfolio/cashless-payment.jpg"
                   alt="Cashless Payment"
-                  width="359"
+                  width="360"
                 />
                 <div class="card-content">
                   <h2 class="title">Cashless Payment</h2>
@@ -113,10 +113,10 @@
             <li class="card-item">
               <a class="card-link" href="./">
                 <img
-                  class="image"
+                  class="card-img"
                   src="./images/portfolio/mediaton-app.jpg"
                   alt="Meditaion App"
-                  width="359"
+                  width="360"
                 />
                 <div class="card-content">
                   <h2 class="title">Meditaion App</h2>
@@ -127,10 +127,10 @@
             <li class="card-item">
               <a class="card-link" href="./">
                 <img
-                  class="image"
+                  class="card-img"
                   src="./images/portfolio/taxi-service.jpg"
                   alt="Taxi Service"
-                  width="359"
+                  width="360"
                 />
                 <div class="card-content">
                   <h2 class="title">Taxi Service</h2>
@@ -141,10 +141,10 @@
             <li class="card-item">
               <a class="card-link" href="./">
                 <img
-                  class="image"
+                  class="card-img"
                   src="./images/portfolio/screen-illustrations.jpg"
                   alt="Screen Illustrations"
-                  width="359"
+                  width="360"
                 />
                 <div class="card-content">
                   <h2 class="title">Screen Illustrations</h2>
@@ -155,10 +155,10 @@
             <li class="card-item">
               <a class="card-link" href="./">
                 <img
-                  class="image"
+                  class="card-img"
                   src="./images/portfolio/online-courses.jpg"
                   alt="Online Courses"
-                  width="359"
+                  width="360"
                 />
                 <div class="card-content">
                   <h2 class="title">Online Courses</h2>
@@ -169,10 +169,10 @@
             <li class="card-item">
               <a class="card-link" href="./">
                 <img
-                  class="image"
+                  class="card-img"
                   src="./images/portfolio/instagram-stories-concept.jpg"
                   alt="Instagram Stories Concept"
-                  width="359"
+                  width="360"
                 />
                 <div class="card-content">
                   <h2 class="title">Instagram Stories Concept</h2>
@@ -183,10 +183,10 @@
             <li class="card-item">
               <a class="card-link" href="./">
                 <img
-                  class="image"
+                  class="card-img"
                   src="./images/portfolio/organic-food.jpg"
                   alt="Organic Food"
-                  width="359"
+                  width="360"
                 />
                 <div class="card-content">
                   <h2 class="title">Organic Food</h2>
@@ -197,10 +197,10 @@
             <li class="card-item">
               <a class="card-link" href="./">
                 <img
-                  class="image"
+                  class="card-img"
                   src="./images/portfolio/fresh-coffee.jpg"
                   alt="Fresh Coffee"
-                  width="359"
+                  width="360"
                 />
                 <div class="card-content">
                   <h2 class="title">Fresh Coffee</h2>
